# multimodal-iad

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
src/multimodal_iad/: __init__.py  __main__.py
src/multimodal_iad/anomaly_detection/: __init__.py  detector.py  explainer.py  predict_dataset.py
src/multimodal_iad/anomaly_detection/components/: __init__.py  multimodal_pre_processor.py
src/multimodal_iad/anomaly_detection/components/feature_extractors/: __init__.py  multimodal_timm.py  multimodal_utils.py
src/multimodal_iad/anomaly_detection/patchcore_mm/: __init__.py  lightning_model.py  torch_model.py
src/multimodal_iad/gui/: __init__.py  app.py  main_panel.py  main_window.py
src/multimodal_iad/utils/: __init__.py  constants.py  helper.py
