[project]
name = "multimodal-iad"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anomalib[core]>=2.0.0",
    "flet>=0.28.3",
    "hydra-zen>=0.15.0",
    "kivy>=2.3.1",
    "kivymd>=1.2.0",
    "pydantic>=2.11.7",
    "pyside6>=6.9.1",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
]

[tool.uv]
package = true

[dependency-groups]
dev = ["ruff>=0.12.0"]

[tool.ruff]
line-length = 120
select = ["ALL"]

[tool.ruff.lint]
fixable = ["ALL"]

[tool.ruff.format]
docstring-code-format = true
