[project]
name = "multimodal-iad"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anomalib[core]>=2.0.0",
    "hydra-zen>=0.15.0",
    "pydantic>=2.11.7",
    "pyqt6>=6.9.1",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
]

[tool.uv]
package = true

[dependency-groups]
dev = ["ruff>=0.12.0"]

[tool.ruff]
line-length = 120
select = ["ALL"]

[tool.ruff.lint]
fixable = ["ALL"]

[tool.ruff.format]
docstring-code-format = true
